criando tabela colgrup

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="style.css">
   
   <title>Frontend Mentor | 3-column preview card component</title>
 
@@ -19,6 +20,11 @@
 
   <section>
   <table>
+    <colgroup>
+      <col id="csedans">
+      <col id="csuvs">
+      <col id="cluxury">
+    </colgroup>
     <tr>
       <th scope="col">Sedans</th>
       <th scope="col">SUVs</th>
@@ -35,9 +41,9 @@
      </tr>
 
      <tr>
-      <td > Learn More</td>
-      <td> Learn More</td>
-      <td> Learn More</td>
+      <td > <button>Learn More</button> </td>
+      <td> <button>Learn More</button></td>
+      <td> <button>Learn More</button></td>
      </tr>
   </table>
  </section>
