inserir fonte e cores

--- a/index.html
+++ b/index.html
@@ -26,9 +26,15 @@
       <col id="cluxury">
     </colgroup>
     <tr>
-      <th scope="col">Sedans</th>
-      <th scope="col">SUVs</th>
-      <th scope="col">Luxury</th>
+      <th scope="col" > <img src="images/icon-sedans.svg" alt=""> <br> </th>
+      <th scope="col"> <img src="images/icon-suvs.svg" alt=""> <br> </th>
+      <th scope="col"> <img src="images/icon-luxury.svg" alt=""> <br> </th>
+    </tr>
+
+    <tr>
+      <td>Sedans</td>
+      <td>SUVs</td>
+      <td>Luxury</td>
     </tr>
 
     <tr>
